@@ -69,4 +69,10 @@
 
 #define TARGET_ASM_FILE_END file_end_indicate_exec_stack
 
+/* Uninitialized common symbols in non-PIE executables, even with
+   strong definitions in dependent shared libraries, will resolve
+   to COPY relocated symbol in the executable.  See PR65780.  */
+#undef TARGET_BINDS_LOCAL_P
+#define TARGET_BINDS_LOCAL_P default_binds_local_p_2
+
 #endif  /* GCC_AARCH64_LINUX_H */
